# tensorrt-flow

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Readme.md
cmake/: tensorrt_flowConfig.cmake.in
include/tensorrt_flow/cuda/: cuda_helper.hpp  image_resize_kernel.hpp
include/tensorrt_flow/cxxopts/: cxxopts.hpp
include/tensorrt_flow/def/: arch.hpp  bmp_def.hpp  precision.hpp
include/tensorrt_flow/image_process/: image_resize.hpp  resize_tactics.hpp
include/tensorrt_flow/memory/: device_memory.hpp  hetero_memory.hpp  host_memory.hpp  memory_interface.hpp  memory_pool.hpp
include/tensorrt_flow/tensorrt/: trt_calibrator.hpp  trt_logger.hpp  trt_model_framework.hpp  trt_model_frramework.hpp  trt_model_plugin.hpp  trt_utils.hpp
resnet50/: CMakeLists.txt  calibrator.cc  calibrator.hpp  main.cc  resnet50_def.hpp  trt_resnet50.cc  trt_resnet50.hpp
src/cuda/: image_resize_kernel.cu
src/image_process/: image_resize.cc
src/memory/: device_memory.cc  hetero_memory.cc  host_memory.cc  memory_pool.cc
src/tensorrt/: trt_logger.cc  trt_model_framework.cc  trt_model_frramework.cc  trt_utils.cc
test/: CMakeLists.txt  test_memory.cc
yolov8/: CMakeLists.txt  main.cc
yolov8/include/: affine.hpp  yolov8_parameter.hpp  yolov8_plugin.hpp
yolov8/src/: affine.cu  yolov8_plugin.cc
